# led-watch

./: .gitignore  LICENSE  README.md
bootloader/: Makefile  README.md  STM32L052X8.ld  STM32L052X8_Bootloader.ld
bootloader/include/: bootloader.h  nvm.h  usb_desc.h  usb_hid.h
bootloader/openocd/: flash.cfg  openocd.cfg
bootloader/src/: bootloader.c  main.c  nvm.c  osc.c  startup_stm32l052xx.s  system_stm32l0xx.c  usb_desc.c  usb_hid.c
cad/: CLY6D-FKC.wrl  CPFB.wrl  Custom.fcstd  EVPAV.wrl  JST-ACH.wrl  JST-SH.wrl  LED-0606.wrl  SMD-1008.wrl  css-0575a-smt.wrl  stencil.blend
cad/case/: .gitignore  Makefile  case.fcstd  case.scad
common/include/: macro_helpers.h  osc.h  usb_hid.h
common/src/: debug.c  system_stm32l0xx.c  usb.c
firmware/: Makefile  README.md  STM32L052X8.ld
firmware/include/: buttons.h  buzzer.h  i2c.h  leds.h  mma8652.h  power.h  rtc.h  usb.h  usb_desc.h  usb_hid.h
firmware/openocd/: flash.cfg  run-openocd-server.sh
firmware/src/: buttons.c  buzzer.c  i2c.c  leds.c  main.c  mma8652.c  power.c  rtc.c  usb.c  usb_desc.c  usb_hid.c
host/: CMakeLists.txt  README.md  bootloader  wristwatch
host/device/: bootloader.py  wristwatch.py
host/include/: MainWindow.h  Wristwatch.h  WristwatchPoller.h
host/src/: MainWindow.cpp  Wristwatch.cpp  WristwatchPoller.cpp  main.cpp
kicad/: control.sch  fp-lib-table  input.sch  leds.sch  power-supply.sch  simple-led-watch-cache.lib  simple-led-watch-rescue.lib  simple-led-watch.dcm  simple-led-watch.kicad_pcb  simple-led-watch.lib  simple-led-watch.pro  simple-led-watch.sch  usb.sch
(+15 files in other folders)
